Fixed orange color on mobile

--- a/css/layout.css
+++ b/css/layout.css
@@ -1280,7 +1280,7 @@ footer .social-links li {
   margin: 0;
   padding: 0;
   margin-left: 42px;
-  color: #f06000;
+  color: #11abb0;
 }
 
 footer .social-links li:first-child {
